RESOLVED FIXED199464
Some layers inside overflow:scroll don't move back to correct positions when the contents are shrunk
https://bugs.webkit.org/show_bug.cgi?id=199464
Summary Some layers inside overflow:scroll don't move back to correct positions when ...
Simon Fraser (smfr)
Reported 2019-07-03 15:00:30 PDT
Created attachment 373416 [details] Testcase Attached test case shows a bug with async scrolling where a content resize fails to scroll the scroller back to the top.
Attachments
Testcase (1.30 KB, text/html)
2019-07-03 15:00 PDT, Simon Fraser (smfr)
no flags
Patch (5.34 KB, patch)
2019-07-03 21:57 PDT, Simon Fraser (smfr)
sam: review+
Radar WebKit Bug Importer
Comment 1 2019-07-03 15:01:06 PDT
Simon Fraser (smfr)
Comment 2 2019-07-03 21:19:51 PDT
It does scroll to the top, but it fails to reposition non-paint-order composited descendants.
Simon Fraser (smfr)
Comment 3 2019-07-03 21:57:07 PDT
Simon Fraser (smfr)
Comment 4 2019-07-03 23:30:09 PDT
Comment on attachment 373453 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=373453&action=review > Source/WebCore/ChangeLog:3 > + Some layers inside overflow:scroll move back to correct positions when the contents are shrunk Title needs fixing.
Simon Fraser (smfr)
Comment 5 2019-07-04 13:35:37 PDT
Note You need to log in before you can comment on or make changes to this bug.