Some layers inside overflow:scroll don't move back to correct positions when the contents are shrunk https://bugs.webkit.org/show_bug.cgi?id=199464 rdar://problem/52613285

Reviewed by Sam Weinig.
Source/WebCore:

When an overflow scroller's content shrink and it becomes non-scrollable, the 'boundsOrigin' in
the ancestor clipping stacks of related layers wouldn't get reset to zero, leaving layers in
the wrong place, so always set boundsOrigin to zero on the clipping layers of non-overflow entries
in the ancestor clipping stack.

Test: compositing/scrolling/async-overflow-scrolling/become-non-scrollable-with-child.html

* rendering/RenderLayerBacking.cpp:
(WebCore::RenderLayerBacking::updateGeometry):

LayoutTests:

* compositing/scrolling/async-overflow-scrolling/become-non-scrollable-with-child-expected.html: Added.
* compositing/scrolling/async-overflow-scrolling/become-non-scrollable-with-child.html: Added.

Canonical link: https://commits.webkit.org/213408@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@247142 268f45cc-cd09-0410-ab3c-d52691b4dbfc